--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sudoku Solver - Rupesh</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./pastime.png" type="image/x-icon">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <div class="w-full">
