--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             
             <div class="flex mt-4 w-full h-full justify-between flex-col lg:flex-row">
                 <!-- left part -->
-                <div class="box border-gray-800  grid grid-cols-9 p-5 self-center w-[130%] md:w-fit">
+                <div class="box border-gray-800  grid grid-cols-9 p-5 self-center mainbox">
                     <div class="box-c-1">
                         <div class="md:w-[48px] md:h-[48px] w-[33px] h-[33px] bg-white rounded-[4px] border-gray-400  shadow-black shadow-sm 0"></div>
                         <div class="md:w-[48px] md:h-[48px] w-[33px] h-[33px] bg-white rounded-[4px] border-gray-400  shadow-black shadow-sm mt-[1.5px] 1"></div>
