--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
                 </div>
                 <!-- rightpart -->
                 <div class="content">
-                    <div class="flex flex-col justify-center items-center space-x-2 w-full">
+                    <div class="flex flex-col justify-center items-center space-x-1 w-full">
                         <div class="rightpart flex justify-center items-center h-[50px] w-full ml-3">
                             <p class="text-[12px] md:text-sm w-[70px] mt-1"  >Set Delay</p>
-                            <svg class="MuiSvgIcon-root w-[20px] pt-1 mt-1" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                            <svg class="MuiSvgIcon-root w-[20px] pt-1 mt-[2px]" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
                                 <path d="M15.5 5H11l5 7-5 7h4.5l5-7z"></path>
                                 <path d="M8.5 5H4l5 7-5 7h4.5l5-7z"></path>
                             </svg>      
